# smartphone_defect_segmentation

./: .gitignore  README.md  augmentation.sh  gputest.py  pyproject.toml  requirements.txt  test.ipynb
jupyter/: Augementation_test.ipynb  DeepLab.ipynb  FCN.ipynb  Final_UNet.ipynb  UNet.ipynb  UNet_Aug.ipynb  mask_test.ipynb
poc_app/: app.py
poc_app/weights/: transformpt.py
script/: .gitignore  download_kaggle_dataset.py  eval.py  train.py
src/segtool/: __init__.py  augmentation.py  config.py  data.py  engine.py  losses.py  metrics.py  model.py  models_factory.py  utils.py
wandb/: latest-run
wandb/run-20260103_180224-b57b9ng8/: run-b57b9ng8.wandb
wandb/run-20260103_180235-y9hs9qjh/: run-y9hs9qjh.wandb
wandb/run-20260103_180413-7lukgnqn/: run-7lukgnqn.wandb
wandb/run-20260103_180436-wxvdy8zs/: run-wxvdy8zs.wandb
wandb/run-20260103_180728-kihn86ei/: run-kihn86ei.wandb
wandb/run-20260103_180830-9wkr3qlh/: run-9wkr3qlh.wandb
wandb/run-20260104_174556-ecmpyemj/: run-ecmpyemj.wandb
wandb/run-20260104_174629-dmfzbmfn/: run-dmfzbmfn.wandb
wandb/run-20260104_174720-4xcgafab/: run-4xcgafab.wandb
wandb/run-20260104_174741-wqv94h6n/: run-wqv94h6n.wandb
wandb/run-20260104_174755-bfk8rqas/: run-bfk8rqas.wandb
wandb/run-20260104_174842-i1z5hgas/: run-i1z5hgas.wandb
wandb/run-20260104_174902-aydx1tr3/: run-aydx1tr3.wandb
wandb/run-20260104_174935-qyy7vy04/: run-qyy7vy04.wandb
wandb/run-20260104_175029-i6t544ts/: run-i6t544ts.wandb
wandb/run-20260104_175410-6i1djrpc/: run-6i1djrpc.wandb
wandb/run-20260104_175609-071xetl1/: run-071xetl1.wandb
(+34 files in other folders)
